--- a/client/css/less/components/ticket.less
+++ b/client/css/less/components/ticket.less
@@ -22,9 +22,6 @@
           color: @darkGray;
           font-weight: 700;
           font-size: 18px;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
         }
 
         h4 {
